@@ -21,6 +21,14 @@
 </tr>
 </table>
 <p>
+2009-09-24  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> coders/meta.c (GetIPTCStream): IPTC blobs should be padded to an
+        even size.  Patch submitted by John Sergeant.
+
+</UL>
+<p>
 2009-09-23  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
