@@ -1,3 +1,8 @@
+2009-09-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/meta.c (GetIPTCStream): IPTC blobs should be padded to an
+	even size.  Patch submitted by John Sergeant.
+
 2009-09-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* coders/tiff.c (WriteGROUP4RAWImage): Added a GROUP4RAW encoder.
